# T-meet

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  config.example.toml  deny.toml  docker-compose.yml  justfile  prompt.txt  run.sh  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml  security.yml
crates/meet-core/: Cargo.toml
crates/meet-core/fuzz/: Cargo.toml
crates/meet-core/fuzz/fuzz_targets/: signaling_parse.rs
crates/meet-core/src/: config.rs  error.rs  ids.rs  lib.rs  log.rs
crates/meet-core/src/auth/: mod.rs  password.rs  room_secret.rs  token.rs
crates/meet-core/src/crypto/: ca.rs  leaf.rs  mod.rs  passphrase.rs  rotation.rs  seal.rs
crates/meet-core/src/db/: audit_log.rs  mod.rs  participants.rs  rooms.rs
crates/meet-core/src/signaling/: mod.rs  sfu_api.rs  state.rs
crates/meet-server/: Cargo.toml
crates/meet-server/src/: admin.rs  admin_secret.rs  app.rs  init.rs  lib.rs  main.rs  passphrase.rs  paths.rs  serve.rs  tls.rs
crates/meet-server/src/middleware/: access_log.rs  admin_auth.rs  body_limit.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
crates/meet-server/src/routes/: admin.rs  assets.rs  ca.rs  health.rs  mod.rs  rooms_public.rs  setup_info.rs  ws.rs
crates/meet-server/src/signaling/: conn.rs  mod.rs  room_hub.rs
crates/meet-server/tests/: http_and_storage.rs  init_and_serve.rs  rooms_and_auth.rs  signaling.rs
crates/meet-sfu/: Cargo.toml
crates/meet-sfu/src/: api_engine.rs  lib.rs  peer.rs  room.rs
crates/meet-sfu/tests/: offer_answer.rs
docs/: CA-TRUST.md  INSTALL.md  OPS.md
docs/plan/: 001.md  README.md  phase-00-foundation.md  phase-01-tls-and-crypto.md  phase-02-http-and-storage.md  phase-03-rooms-and-auth.md  phase-04-signaling.md  phase-05-sfu.md  phase-06-frontend-shell.md  phase-07-frontend-webrtc.md  phase-08-e2e-chat.md  phase-09-hardening.md  phase-10-build-and-package.md  phase-11-first-boot-and-ops.md
docs/security/: chat-model.md  checklist.md  threat-model.md
examples/: logrotate-meet  meet-platform.service
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: link-libsodium-sumo.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: app.test.tsx  chat.test.ts  rtc.test.ts  schemas.test.ts  store.test.ts
frontend/src/app/: router.tsx
frontend/src/chat/: keys.ts  seal.ts  store.ts  wire.ts
frontend/src/components/room/: ChatMessage.tsx  ChatPanel.tsx  Controls.tsx  Grid.tsx  PermissionWizard.tsx  VideoTile.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Label.tsx  Spinner.tsx  Toaster.tsx
frontend/src/lib/: api.ts  error_boundary.tsx  schemas.ts  store.ts
frontend/src/pages/: Landing.tsx  NotFound.tsx  Room.tsx  Setup.tsx
frontend/src/rtc/: active_speaker.ts  media.ts  pc.ts  quality.ts  reconnect.ts  signaling.ts  types.ts
frontend/src/styles/: tailwind.css
migrations/: 0001_init.sql
scripts/: check.sh  package.sh  verify_static.sh
