[workspace]
resolver = "2"
members = [
    "crates/meet-core",
    "crates/meet-server",
    "crates/meet-sfu",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "AGPL-3.0-or-later"
repository = "https://github.com/aturzone/T-meet"
authors = ["aturzone"]

[workspace.dependencies]
# Async
tokio = { version = "1.42", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Errors
thiserror = "2.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time & ids
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Config
toml = "0.8"

# PASETO v4 local (Phase 03)
pasetors = { version = "0.7", default-features = false, features = ["v4", "std"] }
base64 = "0.22"
data-encoding = "2.6"

# Crypto (Phase 01)
argon2 = { version = "0.5", default-features = false, features = ["std", "alloc", "password-hash"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "rand_core"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_core = { version = "0.6", features = ["std"] }
subtle = "2.6"
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"

# TLS / certificates (Phase 01)
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.2"
x509-parser = "0.16"

# Passphrase intake (Phase 01)
rpassword = "7.3"

# HTTP (used minimally in Phase 01 for /ca.crt; fleshed out in Phase 02)
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "ws"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
async-trait = "0.1"

# WebRTC SFU (Phase 05)
webrtc = { version = "0.12", default-features = false }

# Storage (Phase 02)
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "sqlite",
    "macros",
    "migrate",
    "time",
] }

# Embedded frontend bundle (Phase 02)
rust-embed = { version = "8.5", default-features = false, features = ["interpolate-folder-path"] }
mime_guess = { version = "2.0", default-features = false }
bytes = "1.8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
