[package]
name = "meet-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
time = { workspace = true }

# Phase 01 crypto
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }

# Phase 02 storage
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
