[package]
name = "meet-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "meet_server"
path = "src/lib.rs"

[[bin]]
name = "meet-server"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
meet-core = { path = "../meet-core" }
meet-sfu = { path = "../meet-sfu" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Phase 01: TLS + passphrase
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }

# Phase 02
sqlx = { workspace = true }
uuid = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots"] }
