[package]
name = "meet-sfu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
meet-core = { path = "../meet-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
